--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "tsc -b && vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview",
+    "test": "echo \"ops... Test not found :( \"",
+    "check-types": "tsc --project tsconfig.json --pretty --noEmit",
     "icons:build": "rimraf ./src/shared/icons && npx @svgr/cli --typescript --out-dir src/shared/icons --index-template config/svgr-index-template.js -- src/shared/assets/icons && npx prettier ./src/shared/icons --write"
   },
   "dependencies": {
