--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "test": "echo \"ops... Test not found :( \"",
     "check-types": "tsc --project tsconfig.json --pretty --noEmit",
-    "icons:build": "rimraf ./src/shared/icons && npx @svgr/cli --typescript --out-dir src/shared/icons --index-template config/svgr-index-template.js -- src/shared/assets/icons && npx prettier ./src/shared/icons --write"
+    "icons:build": "rimraf ./src/shared/icons && npx @svgr/cli --typescript --out-dir src/shared/icons --index-template config/svgr-index-template.js -- src/shared/assets/icons && npx prettier ./src/shared/icons --write",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -31,22 +33,34 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.0.1",
     "@eslint/js": "^9.25.0",
+    "@storybook/addon-a11y": "^9.0.15",
+    "@storybook/addon-docs": "^9.0.15",
+    "@storybook/addon-onboarding": "^9.0.15",
+    "@storybook/addon-vitest": "^9.0.15",
+    "@storybook/react-vite": "^9.0.15",
     "@svgr/cli": "^8.1.0",
     "@tanstack/router-plugin": "^1.121.9",
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-storybook": "^9.0.15",
     "globals": "^16.0.0",
+    "playwright": "^1.53.2",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
+    "storybook": "^9.0.15",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
-    "vite-plugin-svgr": "^4.3.0"
+    "vite-plugin-svgr": "^4.3.0",
+    "vitest": "^3.2.4"
   }
 }
